Suppresion dans l'affichage général